syntax = "proto3";

package repo;

import "proto/context.proto";

enum GitProvider {
  UNKNOWN_GIT_PROVIDER = 0;
  GITHUB = 1;
}

message Repo {
  string url = 1;
}

message GetReposRequest {
  context.RequestContext request_context = 1;

  GitProvider git_provider = 2;
}

message GetReposResponse {
  context.ResponseContext response_context = 1;

  repeated Repo repo = 2;
}
